--- a/configs/coco_rgbd.yaml
+++ b/configs/coco_rgbd.yaml
@@ -2,3 +2,6 @@ DATASET:
   NAME: 'coco'
   ROOT: '/Users/Mauceri/Workspace/cocoapi/coco/'
   USE_DEPTH: True
+
+TRAIN:
+  CHECKNAME: 'coco_rgbd_resnet_deeplab'
