New config with brute specific paths

--- a/configs/coco_rgbd_brute.yaml
+++ b/configs/coco_rgbd_brute.yaml
@@ -1,6 +1,6 @@
 DATASET:
   NAME: 'coco'
-  ROOT: '/Users/Mauceri/Workspace/cocoapi/coco/'
+  ROOT: '../datasets/coco/'
   USE_DEPTH: True
 
 TRAIN:
