Use dataset path that is less host specific and remove break from test.py

--- a/configs/cityscapes_rgbd.yaml
+++ b/configs/cityscapes_rgbd.yaml
@@ -1,6 +1,6 @@
 DATASET:
   NAME: 'cityscapes'
-  ROOT: '/Users/Mauceri/Workspace/cityscapes/'
+  ROOT: 'datasets/cityscapes/'
   USE_DEPTH: True
   N_CLASSES: 19
 
