Directory structure is different for synthetic depth

--- a/configs/cityscapes_synthetic_rgbd.yaml
+++ b/configs/cityscapes_synthetic_rgbd.yaml
@@ -5,6 +5,7 @@ DATASET:
   N_CLASSES: 19
   CITYSCAPES:
     DEPTH_SOURCE: 'VNL_Monocular'
+    SYNTHETIC_DEPTH: True
 
 TRAIN:
   CHECKNAME: 'cityscapes_rgbd_resnet_deeplab'
