--- a/configs/model_zoo_coco_rgb.yaml
+++ b/configs/model_zoo_coco_rgb.yaml
@@ -1,7 +1,7 @@
 DATASET:
   NAME: 'coco'
   ROOT: 'datasets/coco/'
-  USE_DEPTH: False
+  MODE: 'RGB'
   COCO:
     CATEGORIES: 'pascal'
   N_CLASSES: 21
