--- a/configs/HHA/cityscapes_hha_imagenet.yaml
+++ b/configs/HHA/cityscapes_hha_imagenet.yaml
@@ -1,12 +1,12 @@
 DATASET:
   NAME: 'cityscapes'
   ROOT: 'datasets/cityscapes/'
-  MODE: 'RGB'
+  MODE: 'RGB_HHA'
   N_CLASSES: 19
 
 TRAIN:
-  CHECKNAME: 'cityscapes_rgb_imagenet'
-  EPOCHS: 100
+  CHECKNAME: 'cityscapes_hha_imagenet'
+  EPOCHS: 200
 
 MODEL:
   INPUT_CHANNELS: 3
