--- a/configs/cityscapes_synthetic_rgbd.yaml
+++ b/configs/cityscapes_synthetic_rgbd.yaml
@@ -1,7 +1,7 @@
 DATASET:
   NAME: 'cityscapes'
   ROOT: 'datasets/cityscapes/'
-  USE_DEPTH: True
+  MODE: 'RGBD'
   N_CLASSES: 19
   CITYSCAPES:
     DEPTH_DIR: 'VNL_Monocular'
