--- a/configs/xception/cityscapes_rgb_xception_pt.yaml
+++ b/configs/xception/cityscapes_rgb_xception_pt.yaml
@@ -5,8 +5,11 @@ DATASET:
   N_CLASSES: 19
 
 TRAIN:
-  CHECKNAME: 'cityscapes_rgb_resnet'
+  CHECKNAME: 'cityscapes_rgb_xception_pt'
   EPOCHS: 200
 
 MODEL:
   INPUT_CHANNELS: 3
+  BACKBONE_ZOO: True
+  BACKBONE: 'xception'
+
