Save finetuned networks in new directory

--- a/configs/xception/cityscapes_rgb_xception_pt_fine.yaml
+++ b/configs/xception/cityscapes_rgb_xception_pt_fine.yaml
@@ -7,8 +7,14 @@ DATASET:
     TRAIN_SET: 'train'
 
 TRAIN:
-  CHECKNAME: 'cityscapes_rgb_xception_pt'
+  CHECKNAME: 'cityscapes_rgb_xception_pt_fine'
   EPOCHS: 200
+  FINETUNE: True
+  RESUME: True
+
+RESUME:
+  DIRECTORY: 'runs/cityscapes_rgb_xception_pt/'
+  MODEL: 'model_best.pth.tar'
 
 MODEL:
   INPUT_CHANNELS: 3
