Fine-tuning configs need to use fine grained annotation. Depth distribution visualizatioon start

--- a/configs/xception/cityscapes_synthetic_rgbd_xception_fine.yaml
+++ b/configs/xception/cityscapes_synthetic_rgbd_xception_fine.yaml
@@ -6,6 +6,7 @@ DATASET:
   CITYSCAPES:
     DEPTH_DIR: 'VNL_Monocular'
     TRAIN_SET: 'train'
+    GT_MODE: 'gtFine'
 
 TRAIN:
   CHECKNAME: 'cityscapes_synth_rgbd_xception'
