--- a/configs/xception/cityscapes_rgb_xception_pt_fine.yaml
+++ b/configs/xception/cityscapes_rgb_xception_pt_fine.yaml
@@ -5,6 +5,7 @@ DATASET:
   N_CLASSES: 19
   CITYSCAPES:
     TRAIN_SET: 'train'
+    GT_MODE: 'gtFine'
 
 TRAIN:
   CHECKNAME: 'cityscapes_rgb_xception_pt_fine'
