--- a/configs/cityscapes_synthetic_rgbd.yaml
+++ b/configs/cityscapes_synthetic_rgbd.yaml
@@ -2,6 +2,7 @@ DATASET:
   NAME: 'cityscapes'
   ROOT: 'datasets/cityscapes/'
   MODE: 'RGBD'
+  SYNTHETIC: True
   N_CLASSES: 19
   CITYSCAPES:
     DEPTH_DIR: 'VNL_Monocular'
