Model location changed

--- a/configs/finetune/cityscapes_rgb_xception_pt_coarse_fine.yaml
+++ b/configs/finetune/cityscapes_rgb_xception_pt_coarse_fine.yaml
@@ -14,7 +14,7 @@ TRAIN:
 
 CHECKPOINT:
   DIRECTORY: 'models/xception_cityscapes_rgb_2020_04_27/'
-  MODEL: 'model_best.pth.tar'
+  MODEL: 'checkpoint.pth.tar'
 
 MODEL:
   INPUT_CHANNELS: 3
