--- a/configs/finetune/cityscapes_rgbd_resnet_coco_fine2.yaml
+++ b/configs/finetune/cityscapes_rgbd_resnet_coco_fine2.yaml
@@ -15,3 +15,4 @@ TRAIN:
 CHECKPOINT:
   DIRECTORY: 'models/resnet_coco_rgbd_2020_04_24/'
   MODEL: 'checkpoint.pth.tar'
+  EXCLUDE: ['decoder.last_conv.8.weight', 'decoder.last_conv.8.bias']
