Increase frequency of validation for scenenet

--- a/configs/depthaware/scenenet_depthaware.yaml
+++ b/configs/depthaware/scenenet_depthaware.yaml
@@ -8,6 +8,7 @@ TRAIN:
   CHECKNAME: 'scenenet_depthaware'
   EPOCHS: 200
   VAL_MAX: 1000
+  EVAL_INTERVAL: 0.2
 
 MODEL:
   BACKBONE: 'depthaware_resnet'
