--- a/configs/low-light/scenenet_depthaware_lowlight.yaml
+++ b/configs/low-light/scenenet_depthaware_lowlight.yaml
@@ -3,9 +3,10 @@ DATASET:
   ROOT: 'datasets/scenenet'
   MODE: 'RGBD'
   N_CLASSES: 14
+  DARKEN: True
 
 TRAIN:
-  CHECKNAME: 'scenenet_depthaware'
+  CHECKNAME: 'scenenet_depthaware_lowlight'
   EPOCHS: 200
   VAL_MAX: 1000
   EVAL_INTERVAL: 0.2
